# parallel_programming_course

modules/task_1/blintsov_s_conj_gradient_omp/: CMakeLists.txt  main.cpp
modules/task_2/blintsov_s_conj_gradient_task2_omp/: CMakeLists.txt  main.cpp
modules/task_3/blintsov_s_conj_gradient_task3_tbb/: CMakeLists.txt  main.cpp
